scripts/nullaway/annotator/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8.txt
../annotator/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/fsm/FiniteStateMachine.java:29: error: [NullAway] enhanced-for expression matrix.getPossibleStates(currentState) is @Nullable
        for (State possibleState : matrix.getPossibleStates(currentState)) {
                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/EvaluationStack.java:115: error: [NullAway] passing @Nullable parameter 'function' where @NonNull is required
        functionStack.push(function);
                           ^
    (see http://t.uber.com/nullaway )
../annotator/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/parsers/BinaryOperatorParser.java:31: error: [NullAway] passing @Nullable parameter 'binaryOperator' where @NonNull is required
                        stack.pushOperator(binaryOperator);
                                           ^
    (see http://t.uber.com/nullaway )
3 errors
